--- a/index.html
+++ b/index.html
@@ -35,30 +35,33 @@
   <header id="header">
     <div class="container-fluid">
       <div class="row align-items-center">
-        <div class="col-lg-9">
+        <div class="col-lg-9 col-sm-6">
           <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="index.html">
+            <!-- <a class="navbar-brand" href="index.html">
               <img class="logo" src="images/logo.png" alt="image">
-            </a>
+            </a> -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
               aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-              <ul class="navbar-nav ml-auto">
+              <ul class="navbar-nav">
                 <li class="nav-item">
                   <a class="nav-link active" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="about-us.html">About Us</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="Services.html">Services</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="product.html">Product</a>
+                  <a class="nav-link" href="product.html">Team</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about-us.html">About Us</a>
+                  <a class="nav-link" style="color: #e1a471" href="product.html">Contact Us</a>
                 </li>
-                <li class="nav-item dropdown">
+                <!-- <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
                     Blog
@@ -88,11 +91,16 @@
                     <a class="dropdown-item" href="register.html">Register</a>
                     <a class="dropdown-item" href="privacy-policy.html">Privacy Policy</a>
                   </div>
-                </li>
+                </li> -->
               </ul>
             </div>
           </nav>
         </div>
+                <div class="col-lg-3 text-right">
+        <a class="navbar-brand" href="index.html">
+          <img class="logo" src="images/logo.png" alt="image">
+        </a>
+                </div>
         <!-- <div class="col-lg-3 text-right">
           <ul class="login">
             <li class="d-inline search">
@@ -132,7 +140,7 @@
             data-transform_in="x:50px;opacity:0;s:1000;e:Power3.easeInOut;"
             data-transform_out="opacity:0;s:300;e:Power3.easeInOut;" data-start="600" data-splitin="none"
             data-splitout="none" data-responsive_offset="on"
-            style="z-index: 5; white-space: nowrap; font-size: 60px; line-height: 70px; font-weight: 600; color: rgba(255, 255, 255, 1.00);font-family:Josefin Sans;">
+            style="z-index: 5; white-space: nowrap; font-size: 60px; line-height: 70px; font-weight: 600; color: #555555;font-family:Josefin Sans;">
             Teamwork <br>Makes Dream Work </h1>
           <!-- LAYER NR. 2 -->
           <p class="tp-caption   tp-resizeme" id="slide-13-layer-2" data-x="30" data-y="center" data-voffset="40"
@@ -140,8 +148,8 @@
             data-transform_in="x:50px;opacity:0;s:1000;e:Power3.easeInOut;"
             data-transform_out="opacity:0;s:300;e:Power3.easeInOut;" data-start="600" data-splitin="none"
             data-splitout="none" data-responsive_offset="on"
-            style="z-index: 6; white-space: nowrap; font-size: 16px; line-height: 36px; font-weight: 400; color: rgba(255, 255, 255, 1.00);">
-            We build and deliver information security platform and services to pro<br> actively secure. </p>
+            style="z-index: 6; white-space: nowrap; font-size: 16px; line-height: 36px; font-weight: 400; color: #717070;">
+            mobility and ict solutions for sustainable cities ... </p>
           <!-- LAYER NR. 3 -->
           <!-- <div class="tp-caption rev-btn button  tp-resizeme" id="slide-13-layer-3" data-x="30" data-y="center"
             data-voffset="140" data-width="['auto']" data-height="['auto']" data-transform_idle="o:1;"
@@ -152,11 +160,11 @@
             style="z-index: 7; white-space: nowrap; line-height: 24px;  box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;">
             Start a Project </div> -->
           <!-- LAYER NR. 4 -->
-          <div class="tp-caption   tp-resizeme rs-parallaxlevel-1" id="slide-13-layer-4" data-x="814" data-y="136"
+          <!-- <div class="tp-caption   tp-resizeme rs-parallaxlevel-1" id="slide-13-layer-4" data-x="814" data-y="136"
             data-width="['none','none','none','none']" data-height="['none','none','none','none']"
             data-transform_idle="o:1;" data-transform_in="x:-50px;opacity:0;s:1000;e:Power3.easeInOut;"
             data-transform_out="opacity:0;s:300;" data-start="1600" data-responsive_offset="on" style="z-index: 8;"><img
-              src="revslider/assets/b36bd-03.png" alt="" data-ww="507px" data-hh="627px" data-no-retina> </div>
+              src="revslider/assets/b36bd-03.png" alt="" data-ww="507px" data-hh="627px" data-no-retina> </div> -->
         </li>
         <!-- SLIDE  -->
         <li data-index="rs-19" data-transition="fade" data-slotamount="default" data-hideafterloop="0"
@@ -174,7 +182,7 @@
             data-transform_in="x:50px;opacity:0;s:1000;e:Power3.easeInOut;"
             data-transform_out="opacity:0;s:300;e:Power3.easeInOut;" data-start="600" data-splitin="none"
             data-splitout="none" data-responsive_offset="on"
-            style="z-index: 5; white-space: nowrap; font-size: 60px; line-height: 70px; font-weight: 600; color: rgba(255, 255, 255, 1.00);font-family:Josefin Sans;">
+            style="z-index: 5; white-space: nowrap; font-size: 60px; line-height: 70px; font-weight: 600; color: #555555;font-family:Josefin Sans;">
             Make
             <br>A Diffrence Every Day </h1>
           <!-- LAYER NR. 2 -->
@@ -183,8 +191,8 @@
             data-transform_in="x:50px;opacity:0;s:1000;e:Power3.easeInOut;"
             data-transform_out="opacity:0;s:300;e:Power3.easeInOut;" data-start="600" data-splitin="none"
             data-splitout="none" data-responsive_offset="on"
-            style="z-index: 6; white-space: nowrap; font-size: 16px; line-height: 36px; font-weight: 400; color: rgba(255, 255, 255, 1.00);">
-            We build and deliver information security platform and services to pro<br> actively secure. </p>
+            style="z-index: 6; white-space: nowrap; font-size: 16px; line-height: 36px; font-weight: 400; color: #717070;">
+            mobility and ict solutions for sustainable cities ... </p>
           <!-- LAYER NR. 3 -->
           <!-- <div class="tp-caption rev-btn button  tp-resizeme" id="slide-19-layer-3" data-x="30" data-y="center"
             data-voffset="140" data-width="['auto']" data-height="['auto']" data-transform_idle="o:1;"
@@ -195,11 +203,11 @@
             style="z-index: 7; white-space: nowrap; line-height: 24px;  box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;">
             Start a Project </div> -->
           <!-- LAYER NR. 4 -->
-          <div class="tp-caption   tp-resizeme" id="slide-19-layer-5" data-x="right" data-hoffset="10" data-y="100"
+          <!-- <div class="tp-caption   tp-resizeme" id="slide-19-layer-5" data-x="right" data-hoffset="10" data-y="100"
             data-width="['none','none','none','none']" data-height="['none','none','none','none']"
             data-transform_idle="o:1;" data-transform_in="x:50px;opacity:0;s:1000;e:Power3.easeInOut;"
             data-transform_out="opacity:0;s:300;" data-start="1600" data-responsive_offset="on" style="z-index: 8;"><img
-              src="revslider/assets/b174f-01.png" alt="" data-ww="auto" data-hh="auto" data-no-retina> </div>
+              src="revslider/assets/b174f-01.png" alt="" data-ww="auto" data-hh="auto" data-no-retina> </div> -->
         </li>
         <!-- SLIDE  -->
         <li data-index="rs-20" data-transition="fade" data-slotamount="default" data-hideafterloop="0"
@@ -217,7 +225,7 @@
             data-transform_in="x:50px;opacity:0;s:1000;e:Power3.easeInOut;"
             data-transform_out="opacity:0;s:300;e:Power3.easeInOut;" data-start="600" data-splitin="none"
             data-splitout="none" data-responsive_offset="on"
-            style="z-index: 5; white-space: nowrap; font-size: 60px; line-height: 70px; font-weight: 600; color: rgba(255, 255, 255, 1.00);font-family:Josefin Sans;">
+            style="z-index: 5; white-space: nowrap; font-size: 60px; line-height: 70px; font-weight: 600; color: #555555;font-family:Bordway;">
             Innovation &<br>Excellence </h1>
           <!-- LAYER NR. 2 -->
           <p class="tp-caption   tp-resizeme" id="slide-20-layer-2" data-x="30" data-y="center" data-voffset="40"
@@ -225,8 +233,8 @@
             data-transform_in="x:50px;opacity:0;s:1000;e:Power3.easeInOut;"
             data-transform_out="opacity:0;s:300;e:Power3.easeInOut;" data-start="600" data-splitin="none"
             data-splitout="none" data-responsive_offset="on"
-            style="z-index: 6; white-space: nowrap; font-size: 16px; line-height: 36px; font-weight: 400; color: rgba(255, 255, 255, 1.00);">
-            We build and deliver information security platform and services to pro<br> actively secure. </p>
+            style="z-index: 6; white-space: nowrap; font-size: 16px; line-height: 36px; font-weight: 400; color: #717070;">
+            mobility and ict solutions for sustainable cities ... </p>
           <!-- LAYER NR. 3 -->
           <!-- <div class="tp-caption rev-btn button  tp-resizeme" id="slide-20-layer-3" data-x="30" data-y="center"
             data-voffset="140" data-width="['auto']" data-height="['auto']" data-transform_idle="o:1;"
@@ -237,11 +245,11 @@
             style="z-index: 7; white-space: nowrap; line-height: 24px; box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;">
             Start a Project </div> -->
           <!-- LAYER NR. 4 -->
-          <div class="tp-caption   tp-resizeme" id="slide-20-layer-5" data-x="right" data-hoffset="10" data-y="center"
+          <!-- <div class="tp-caption   tp-resizeme" id="slide-20-layer-5" data-x="right" data-hoffset="10" data-y="center"
             data-voffset="" data-width="['none','none','none','none']" data-height="['none','none','none','none']"
             data-transform_idle="o:1;" data-transform_in="x:-50px;opacity:0;s:1000;e:Power3.easeInOut;"
             data-transform_out="opacity:0;s:300;" data-start="1600" data-responsive_offset="on" style="z-index: 8;"><img
-              src="revslider/assets/b174a-02.png" alt="" data-ww="auto" data-hh="auto" data-no-retina> </div>
+              src="revslider/assets/b174a-02.png" alt="" data-ww="auto" data-hh="auto" data-no-retina> </div> -->
         </li>
         <li data-index="rs-21" data-transition="fade" data-slotamount="default" data-hideafterloop="0"
           data-hideslideonmobile="off" data-easein="default" data-easeout="default" data-masterspeed="300"
@@ -258,7 +266,7 @@
             data-transform_in="x:50px;opacity:0;s:1000;e:Power3.easeInOut;"
             data-transform_out="opacity:0;s:300;e:Power3.easeInOut;" data-start="600" data-splitin="none"
             data-splitout="none" data-responsive_offset="on"
-            style="z-index: 5; white-space: nowrap; font-size: 60px; line-height: 70px; font-weight: 600; color: rgba(255, 255, 255, 1.00);font-family:Josefin Sans;">
+            style="z-index: 5; white-space: nowrap; font-size: 60px; line-height: 70px; font-weight: 600; color: #555555;font-family:Josefin Sans;">
             Ethics &<br>Integrity </h1>
           <!-- LAYER NR. 2 -->
           <p class="tp-caption   tp-resizeme" id="slide-21-layer-2" data-x="30" data-y="center" data-voffset="40"
@@ -266,8 +274,8 @@
             data-transform_in="x:50px;opacity:0;s:1000;e:Power3.easeInOut;"
             data-transform_out="opacity:0;s:300;e:Power3.easeInOut;" data-start="600" data-splitin="none"
             data-splitout="none" data-responsive_offset="on"
-            style="z-index: 6; white-space: nowrap; font-size: 16px; line-height: 36px; font-weight: 400; color: rgba(255, 255, 255, 1.00);">
-            We build and deliver information security platform and services to pro<br> actively secure. </p>
+            style="z-index: 6; white-space: nowrap; font-size: 16px; line-height: 36px; font-weight: 400; color: #717070;">
+            mobility and ict solutions for sustainable cities ... </p>
           <!-- LAYER NR. 3 -->
           <!-- <div class="tp-caption rev-btn button  tp-resizeme" id="slide-21-layer-3" data-x="30" data-y="center"
             data-voffset="140" data-width="['auto']" data-height="['auto']" data-transform_idle="o:1;"
@@ -278,11 +286,11 @@
             style="z-index: 7; white-space: nowrap; line-height: 24px; box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;">
             Start a Project </div> -->
           <!-- LAYER NR. 4 -->
-          <div class="tp-caption   tp-resizeme" id="slide-21-layer-5" data-x="right" data-hoffset="10" data-y="center"
+          <!-- <div class="tp-caption   tp-resizeme" id="slide-21-layer-5" data-x="right" data-hoffset="10" data-y="center"
             data-voffset="" data-width="['none','none','none','none']" data-height="['none','none','none','none']"
             data-transform_idle="o:1;" data-transform_in="x:-50px;opacity:0;s:1000;e:Power3.easeInOut;"
             data-transform_out="opacity:0;s:300;" data-start="1600" data-responsive_offset="on" style="z-index: 8;"><img
-              src="revslider/assets/b174a-02.png" alt="" data-ww="auto" data-hh="auto" data-no-retina> </div>
+              src="revslider/assets/b174a-02.png" alt="" data-ww="auto" data-hh="auto" data-no-retina> </div> -->
         </li>
       </ul>
       <div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>
